--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --color-light-green: #ddffff;
   --color-bg-palette: #e4ffff;
   --color-button: #09b451;
+  
 
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -48,9 +49,11 @@
   --radius-xl: calc(var(--radius) + 4px);
 }
 
+
+
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
+  --background: #fff;
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
@@ -81,6 +84,13 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+
+  
+}
+@media (min-width: 1024px) {  /* Large screens and up */
+  :root {
+    --background: #f9fafb;
+  }
 }
 
 .dark {
