--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,11 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  
   --color-light-green: #ddffff;
   --color-bg-palette: #e4ffff;
   --color-button: #09b451;
+  --left-ad: "url('/public/left-ad.png)'";
   
 
   --color-background: var(--background);
@@ -84,6 +86,7 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  
 
   
 }
