--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,11 +119,40 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.image-gallery-thumbnails-container {
+  height: 85px;
+  align-items: center;
+}
+
+.image-gallery-thumbnail-image {
+  height: contain;
+}
+
+.image-gallery-thumbnail {
+  height: contain;
+  border-radius: 4px;
+}
+
+.image-gallery-slides {
+  height: 400px;
+  border: none;
+
+}
+
+.image-gallery-slide,
+.image-gallery-image {
+  max-height: unset;
+  height: 100%;
+  object-fit: cover;
 }
